apps/jellyfin/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-data-pvc
      containers:
      - name: jellyfin
        image: docker.io/jellyfin/jellyfin
        imagePullPolicy: Always
        ports:
          - containerPort: 8096
        volumeMounts:
          - name: config
            mountPath: /config
          - name: cache
            mountPath: /cache
          - name: media
            mountPath: /torrents
